grammar.js
const 
  ca65mnemonic = [ 
    'adc', 'and', 'asl', 'bcc', 'bcs', 'beq', 'bit', 'bmi', 'bne', 'bpl', 'brk', 'bvc', 'bvs', 'clc', 'cld', 'cli', 'clv', 'cmp', 'cpx', 'cpy', 'dec', 'dex', 'dey', 'eor', 'inc', 'inx', 'iny', 'jmp', 'jsr', 'lda', 'ldx', 'ldy', 'lsr', 'nop', 'ora', 'pha', 'php', 'pla', 'plp', 'rol', 'ror', 'rti', 'rts', 'sbc', 'sec', 'sed', 'sei', 'sta', 'stx', 'sty', 'tax', 'tay', 'tsx', 'txa', 'txs', 'tya',
    'ADC', 'AND', 'ASL', 'BCC', 'BCS', 'BEQ', 'BIT', 'BMI', 'BNE', 'BPL', 'BRK', 'BVC', 'BVS', 'CLC', 'CLD', 'CLI', 'CLV', 'CMP', 'CPX', 'CPY', 'DEC', 'DEX', 'DEY', 'EOR', 'INC', 'INX', 'INY', 'JMP', 'JSR', 'LDA', 'LDX', 'LDY', 'LSR', 'NOP', 'ORA', 'PHA', 'PHP', 'PLA', 'PLP', 'ROL', 'ROR', 'RTI', 'RTS', 'SBC', 'SEC', 'SED', 'SEI', 'STA', 'STX', 'STY', 'TAX', 'TAY', 'TSX', 'TXA', 'TXS', 'TYA'
  ],
  ca65wdc = [
    'bra', 'brl', 'cop', 'dea', 'ina', 'jml', 'jsl', 'mvn', 'mvp', 'pea', 'pei', 'per', 'phb', 'phd', 'phk', 'phx', 'phy', 'plb', 'pld', 'plp', 'plx', 'ply', 'rep', 'rtl', 'sep', 'stp', 'stz', 'tcd', 'tcs', 'tdc', 'trb', 'tsb', 'tsc', 'txy', 'tyx', 'wai', 'xba', 'xce',
    'BRA', 'BRL', 'COP', 'DEA', 'INA', 'JML', 'JSL', 'MVN', 'MVP', 'PEA', 'PEI', 'PER', 'PHB', 'PHD', 'PHK', 'PHX', 'PHY', 'PLB', 'PLD', 'PLP', 'PLX', 'PLY', 'REP', 'RTL', 'SEP', 'STP', 'STZ', 'TCD', 'TCS', 'TDC', 'TRB', 'TSB', 'TSC', 'TXY', 'TYX', 'WAI', 'XBA', 'XCE'
  ],
  ca65rockwell = [
    /bbr[0-7]{0,1}/, /bbs[0-7]{0,1}/, /rmb[0-7]{0,1}/, /smb[0-7]{0,1}/,
    /BBR[0-7]{0,1}/, /BBS[0-7]{0,1}/, /RMB[0-7]{0,1}/, /SMB[0-7]{0,1}/
  ],
  ca65macpack = [
   'add', 'sub', 'bge', 'blt', 'bgt', 'ble', 'bnz', 'bze', 'jeq', 'jne', 'jmi', 'jpl', 'jcs', 'jcc', 'jvs', 'jvc',
   'ADD', 'SUB', 'BGE', 'BLT', 'BGT', 'BLE', 'BNZ', 'BZE', 'JEQ', 'JNE', 'JMI', 'JPL', 'JCS', 'JCC', 'JVS', 'JVC'
  ],
  ca65illegal = [
    'alr', 'anc', 'arr', 'axs', 'dcp', 'isc', 'las', 'lax', 'rla', 'rra', 'sax', 'slo', 'sre',
    'ALR', 'ANC', 'ARR', 'AXS', 'DCP', 'ISC', 'LAS', 'LAX', 'RLA', 'RRA', 'SAX', 'SLO', 'SRE'
  ],
  operators = [
    '+', '-', '/', '*', '<', '>', '!', '|', '&', '^', '=', ':'
  ],
  brackets = [
    '(', ')', '[', ']', '{', '}'
  ];

module.exports = grammar({
  name: 'ca65',

  conflicts: $ => [
    [$.operand, $.mem_address],
  ],

  extras: $ => [
    /[ \t\r]+/,
    $.comment
  ],

  rules: {
    source_file: $ => seq(
      repeat(choice($._newline, seq($._item, $._newline))),
      optional($._item)
    ),

    _item: $ => choice(
      $._statement,
      $._preproc,
      $.equ
    ),

    _newline: $ => /\r?\n/,

    _statement: $ => choice(
      $.label,
      prec.right(1, seq(
        $.mnemonic,
        optional(
          $.operand
        )
      )),
      prec(1, seq(
        $.label,
        $.mnemonic,
        optional(
          $.operand
        )
      ))
    ),

    mnemonic: $ => token(choice(
      ...ca65mnemonic,
      ...ca65wdc,
      ...ca65rockwell,
      ...ca65macpack,
      ...ca65illegal
    )),

    operand: $ => choice(
      $.mem_address,
      $.value,
      $.string,
      $.char,
      $.register
    ),

    mem_address: $ => choice(
      $.unnamed_label_ref,
      prec.left(repeat1(
        choice(
          $.base,
          $.number,
          $.identifier,
          $.local_identifier,
          $.char,
          $.operator,
          $.separator,
          $.register,
          $.bracket
        )
      ))
    ),   

    equ: $ => seq(
      field('constant', $.identifier),
      field('equ', $.equal),
      field('value', $.anything)
    ),

    procstart: $ => token(choice('.proc', '.PROC')),
    procend: $ => token(choice('.endproc', '.ENDPROC')),
    proc: $ => seq(
      $.procstart,
      field("proc_name", $.identifier),
      optional(
        seq(
          ':',
          choice('near', 'far', 'huge', 'NEAR', 'FAR', 'HUGE')
        )
      ),
      repeat(choice($._newline, seq($._statement, $._newline))),
      $.procend
    ),

    macrostart: $ => token(choice('.macro', '.mac', '.MACRO', '.MAC')),
    macroend: $ => token(choice('.endmacro', '.endmac', '.ENDMACRO', '.ENDMAC')),
    macro: $ => seq(
      $.macrostart, 
      $.identifier,
      repeatSep($.identifier, $.separator),
      repeat(choice($._newline, seq($._statement, $._newline))),
      $.macroend
    ),

    preprocgen: $ => seq(
      $.preproccmd,
      repeat(
        choice(
          $.number,
          $.string,
          $.identifier,
          $.base,
          $.operator,
          $.bracket,
          $.separator
        )
      )
    ),

    _preproc: $ => choice(
      $.proc,
      $.macro,
      $.preprocgen
    ),

    register: $ => token(
      choice(
        'a', 'x', 'y', 'A', 'X', 'Y'
      )
    ),

    value: $ => seq(
      $.valuetag,
      repeat1(
        choice(
          $.base,
          $.number,
          $.identifier,
          $.local_identifier,
          $.char,
          $.operator,
          $.separator,
          $.register,
          $.bracket
        )
      )
    ),

    base: $ => token(
      choice(
        '$', '%'
      )
    ),

    operator: $ => token(
      choice(...operators)
    ),

    bracket: $ => token(
      choice(...brackets)
    ),

    separator: $ => token(','),

    valuetag: $ => token('#'),
    equal: $ => token('='),
    anything: $ => /.+/,
    label: $ => choice(
      prec(1, seq(choice($.identifier, $.local_identifier), ':')),
      $.unnamed_label
    ),
    unnamed_label: $ => ':',
    unnamed_label_ref: $ => seq(':', choice(repeat1('+'), repeat1('-'))),
    number: $ => /[0-9a-fA-F]+/,
    local_identifier: $ => /@[a-zA-Z_][a-zA-Z0-9_]*/,
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    preproccmd: $ => /\.[a-zA-Z_][a-zA-Z0-9_]*/,
    comment: $ => /;.*/,
    string: $ => /".*"/,
    char: $ => /\'.\'/,
  }
});

function repeatSep1(rule, sep) {
  return seq(
    rule,
    repeat(seq(sep, rule)),
  );
}

function repeatSep(rule, sep) {
  return optional(repeatSep1(rule, sep));
}
